// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component match snapshot correctly 1`] = `
<div
  className="full-width comp-mb fadeInUp"
>
  <h1
    className="header flex flex-justify-center py4"
  >
    COVID-19
  </h1>
</div>
`;

exports[`Header component match snapshot correctly 2`] = `
<Header>
  <div
    className="full-width comp-mb fadeInUp"
  >
    <h1
      className="header flex flex-justify-center py4"
    >
      COVID-19
    </h1>
  </div>
</Header>
`;
